Update: changed text in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div class="wrapper">
 
     <div class="hero">
-      <h1>Deployment <span>Successful V001</span></h1>
+      <h1>My Automated <span>Web App V2</span></h1>
       <p>Live CI/CD pipeline output running inside Kubernetes</p>
     </div>
 
