--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 
     <div class="hero">
       <h1>My Automated <span>Web App V2</span></h1>
-      
+      <h1>My Automated <span>Web App V2</span></h1>
+      <h1>My Automated <span>Web App V2</span></h1>
+      <h1>My Automated <span>Web App V2</span></h1>
     </div>
 
     <div class="cards">
