Update: changed text in index.html

--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
 
     <div class="hero">
       <h1>My Automated <span>Web App V2</span></h1>
-      <h1>My Automated <span>Web App V2</span></h1>
-      <h1>My Automated <span>Web App V2</span></h1>
-      <h1>My Automated <span>Web App V2</span></h1>
+      <h1>My Automat<span>Web App V2</span></h1>
     </div>
 
     <div class="cards">
