Update: changed text in index.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
       <h1>My Automated <span>Web App V2</span></h1>
       <h1>My Automat<span>Web App V2</span></h1>
       <h1>My Automat<span>Web App V2</span></h1>
+      <h1>My Automat<span>Web App V2</span></h1>
+      <h1>My Automat<span>Web App V2</span></h1>
+      <h1>My Automat<span>Web App V2</span></h1>
     </div>
 
     <div class="cards">
